@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclClock.c,v 1.23.2.27 2008/11/10 02:18:38 dgp Exp $
+ * RCS: @(#) $Id: tclClock.c,v 1.23.2.28 2009/11/12 18:16:21 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -254,6 +254,15 @@ TclClockInit(
 				 * plus a terminating NULL. */
     ClockClientData *data;
     int i;
+
+    /*
+     * Safe interps get [::clock] as alias to a master, so do not need their
+     * own copies of the support routines.
+     */
+
+    if (Tcl_IsSafe(interp)) {
+        return;
+    }
 
     /*
      * Create the client data, which is a refcounted literal pool.
